camera to database

--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -2,6 +2,7 @@
 logsDB = Logs
 mainDB = DeviousPs
 definitionsDB = Definitions
+lprDB = Tony
 
 [collections]
 logsCollection=Logs.logs
@@ -16,3 +17,4 @@ itemDefinitionsCollection=Definitions.item-definitions
 npcDefinitionsCollection=Definitions.npc-definitions
 worldNpcsCollection=Definitions.world-npcs
 objectDefinitionsCollection=Definitions.objectDefinition
+lprCollection=Tony.lpr
