vote & donation multipliers + config for points & multipliers

--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -17,4 +17,5 @@ itemDefinitionsCollection=Definitions.item-definitions
 npcDefinitionsCollection=Definitions.npc-definitions
 worldNpcsCollection=Definitions.world-npcs
 objectDefinitionsCollection=Definitions.objectDefinition
+configCollection = DeviousPs.config
 lprCollection=Tony.lpr
