conversion to parking alone

--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -1,21 +1,4 @@
-[databases]
-logsDB = Logs
-mainDB = DeviousPs
-definitionsDB = Definitions
-lprDB = Tony
-
 [collections]
-logsCollection=Logs.logs
-donationsCollection=DeviousPs.donations
-votesCollection=DeviousPs.votes
-punishmentCollection=Logs.punishments
-charactersCollection=DeviousPs.characters
-ipCollection=Logs.ip-locations
-npcDropsCollection=Definitions.npc-drops
-shopsCollection=Definitions.shops
-itemDefinitionsCollection=Definitions.item-definitions
-npcDefinitionsCollection=Definitions.npc-definitions
-worldNpcsCollection=Definitions.world-npcs
-objectDefinitionsCollection=Definitions.objectDefinition
-configCollection = DeviousPs.config
-lprCollection=Tony.lpr
+userCollection=Imber.Users
+parkingCollection=Imber.Parking
+configCollection = Imber.config
