start of converting to OO db structure

--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -13,9 +13,9 @@ charactersCollection=DeviousPs.characters
 ipCollection=Logs.ip-locations
 npcDropsCollection=Definitions.npc-drops
 shopsCollection=Definitions.shops
-itemDefinitionsCollection=Definitions.item-definitions
-npcDefinitionsCollection=Definitions.npc-definitions
-worldNpcsCollection=Definitions.world-npcs
+itemDefinitionsCollection=Definitions.itemDefinitions
+npcDefinitionsCollection=Definitions.npcDefinitions
+worldNpcsCollection=Definitions.worldNpcs
 objectDefinitionsCollection=Definitions.objectDefinition
 configCollection = DeviousPs.config
 lprCollection=Tony.lpr
