start of converting to OO db structure

--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -11,7 +11,7 @@ votesCollection=DeviousPs.votes
 punishmentCollection=Logs.punishments
 charactersCollection=DeviousPs.characters
 ipCollection=Logs.ip-locations
-npcDropsCollection=Definitions.npcDrops
+npcDropsCollection=Definitions.npcDrop
 shopsCollection=Definitions.shops
 itemDefinitionsCollection=Definitions.itemDefinitions
 npcDefinitionsCollection=Definitions.npcDefinitions
