--- a/includes/DBInfo.ini
+++ b/includes/DBInfo.ini
@@ -1,15 +1,14 @@
 [databases]
 logsDB = Logs
-mainDB = DeviousPs
+mainDB = Session
 definitionsDB = Definitions
-lprDB = Tony
 
 [collections]
 logsCollection=Logs.logs
-donationsCollection=DeviousPs.donations
-votesCollection=DeviousPs.votes
+donationsCollection=Session.donations
+votesCollection=Session.votes
 punishmentCollection=Logs.punishments
-charactersCollection=DeviousPs.characters
+charactersCollection=Session.characters
 ipCollection=Logs.ip-locations
 npcDropsCollection=Definitions.npcDrop
 shopsCollection=Definitions.shops
@@ -17,5 +16,5 @@ itemDefinitionsCollection=Definitions.itemDefinitions
 npcDefinitionsCollection=Definitions.npcDefinitions
 worldNpcsCollection=Definitions.worldNpcs
 objectDefinitionsCollection=Definitions.objectDefinition
-configCollection = DeviousPs.config
-lprCollection=Tony.lpr
+configCollection = Session.config
+marketingCollection = Logs.marketing
